# dir2md

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CURRENT_FEATURES.md  Dockerfile  FEATURES.md  LICENSE  README.md  RELEASE_NOTES_v1.0.4.md  SECURITY.md  config_test.md  pyproject.toml  requirements.txt  sitecustomize.py  update.txt
.devcontainer/: devcontainer.json
.github/workflows/: dir2md-blueprint.yml
demo/: app.py  requirements.txt
release_notes/: release-v1.0.3.md  release-v1.0.4.md
scripts/: bench_dir2md.py
src/dir2md/: __init__.py  cli.py  core.py  gitignore.py  license.py  manifest.py  markdown.py  masking.py  parallel.py  simhash.py  summary.py  token.py
tests/: test_dir2md.py
청사진/: dir2md_preset_evaluation_report.ko.md  dir2md_preset_evaluation_report.md
