[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dir2md"
version = "0.0.1"
description = "Generate a Markdown blueprint: directory tree + optional file contents (token-optimized, ICEBERG preset)"
readme = "README.md"
authors = [{name = "Flamehaven", email = "info@flamehaven.space"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["pathspec>=0.12.0"]

[project.scripts]
dir2md = "dir2md.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
